<resources>
    <string name="app_name">Nosh</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="log_in">Log in</string>
    <string name="register_as_an_employee">Register as an Employee?</string>
    <string name="enter_name">Enter name</string>
    <string name="register">Register</string>
    <string name="title_customer_activity">CustomerActivity</string>
    <string name="error_user_type">Error: Cannot determine user type.</string>
    <string name="on_the_way_status_msg">On the way</string>
    <string name="picked_up_status_msg">Waiting to be picked up</string>
    <string name="welcome_to_nosh">Welcome to Nosh!</string>
    <string name="not_registered_yet">Not Registered yet?</string>
    <string name="view_active_orders">View Active Orders</string>
    <string name="accept_order">Accept Order</string>
    <string name="see_current_order">See Current Order</string>
    <string name="order">Order</string>
    <string name="status">Status</string>
    <string name="title_nosh">Nosh</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="remove_item">Remove Item</string>
    <string name="purchase_items">Purchase Items</string>
    <string name="sub_total">Sub-Total:</string>
    <string name="taxes">Taxes:</string>
    <string name="_0_00">0.00</string>
    <string name="delivery_fee">Delivery Fee:</string>
    <string name="total">Total:</string>
    <string name="hello">Hello</string>
    <string name="start_your_order">Start your Order</string>
    <string name="track_your_order">Track Your Order</string>
    <string name="current_order">Current Order:</string>
    <string name="name">Name:</string>
    <string name="number_813_900_1000">Number: 813-900-1000</string>
    <string name="restaurant_subway">Restaurant: Subway</string>
    <string name="order_status_ready_for_pickup">Order Status: Ready for pickup</string>
    <string name="mark_order_as_picked_up">Mark order as picked up</string>
    <string name="mark_order_as_delivered">Mark order as delivered</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="select_your_size">Select your size</string>
    <string name="six_inch">Six Inch</string>
    <string name="footlong">Footlong</string>
    <string name="select_your_bread">Select your bread</string>
    <string name="wheat">Wheat</string>
    <string name="italian">Italian</string>
    <string name="italian_herbs_and_cheese">Italian Herbs and Cheese</string>
    <string name="flatbread">Flatbread</string>
    <string name="make_customizations">Make Customizations</string>
    <string name="ex_no_cheese_light_sauce_etc">Ex. No cheese, light sauce, etc.</string>
    <string name="make_it_a_combo">Make it a Combo</string>
    <string name="ordername">OrderName</string>
    <string name="textview">TextView</string>
    <string name="item_name">Item Name</string>
    <string name="is_combo">Is combo?</string>
    <string name="itemcost">ItemCost</string>
</resources>