<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/shoppingCartViewModel"
    android:orientation="horizontal"
    android:layout_centerHorizontal="true">

    <CheckBox
        android:id="@+id/itemCheckbox"
        style="@style/Theme.Nosh.SubText"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/antic2"
        android:gravity="center"
        android:text="@string/item_name" />

    <TextView
        android:id="@+id/itemCombo"
        style="@style/Theme.Nosh.SubText"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:fontFamily="@font/antic2"
        android:text="@string/is_combo"
        android:visibility="visible" />

    <TextView
        android:id="@+id/itemCost"
        style="@style/Theme.Nosh.SubText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:fontFamily="@font/antic2"
        android:gravity="center"
        android:text="@string/itemcost"
        android:visibility="visible" />

</LinearLayout>