<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="73dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:scaleType="fitXY"
        android:src="@mipmap/home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/white"/>

    <TextView
        android:id="@+id/currentOrder"
        style="@style/Theme.Nosh.Headers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/antic2"
        android:text="@string/shopping_cart"
        android:textAllCaps="false"
        android:textSize="34sp"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/homeButton"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/removeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/remove_item"
        app:layout_constraintBottom_toTopOf="@+id/purchaseButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalHeaderTextView"
        app:layout_constraintVertical_bias="0.964"
        android:backgroundTint="@color/white"/>

    <Button
        android:id="@+id/purchaseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/purchase_items"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/white"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvShoppingCartItems"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/homeButton" />

    <TextView
        android:id="@+id/subTotHeaderTxtView"
        style="@style/Theme.Nosh.SubText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/sub_total"
        app:layout_constraintEnd_toStartOf="@+id/subTotalTxtView"
        app:layout_constraintTop_toBottomOf="@id/rvShoppingCartItems" />

    <TextView
        android:id="@+id/subTotalTxtView"
        style="@style/Theme.Nosh.SubText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:text="@string/_0_00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvShoppingCartItems" />

    <TextView
        android:id="@+id/taxHeaderTextView"
        style="@style/Theme.Nosh.SubText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/taxes"
        app:layout_constraintEnd_toStartOf="@+id/taxTextView"
        app:layout_constraintTop_toBottomOf="@+id/subTotHeaderTxtView" />

    <TextView
        android:id="@+id/taxTextView"
        style="@style/Theme.Nosh.SubText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:text="@string/_0_00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subTotalTxtView" />

    <TextView
        android:id="@+id/delFeeHeaderTextView"
        style="@style/Theme.Nosh.SubText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/delivery_fee"
        app:layout_constraintEnd_toStartOf="@+id/delFeeTxtView"
        app:layout_constraintTop_toBottomOf="@+id/taxHeaderTextView" />

    <TextView
        android:id="@+id/delFeeTxtView"
        style="@style/Theme.Nosh.SubText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:text="@string/_0_00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taxTextView" />

    <TextView
        android:id="@+id/totalHeaderTextView"
        style="@style/Theme.Nosh.SubText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/total"
        app:layout_constraintEnd_toStartOf="@+id/totalCostTextView"
        app:layout_constraintTop_toBottomOf="@+id/delFeeHeaderTextView" />

    <TextView
        android:id="@+id/totalCostTextView"
        style="@style/Theme.Nosh.SubText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:text="@string/_0_00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delFeeTxtView" />


</androidx.constraintlayout.widget.ConstraintLayout>
