<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/homeTextView"
        style="@style/Theme.Nosh.SubText"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginTop="204dp"
        android:fontFamily="@font/antic2"
        android:gravity="center_horizontal"
        android:text="@string/hello"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/cartButton"
        android:layout_width="73dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:backgroundTint="@color/white"
        android:scaleType="fitXY"
        android:src="@mipmap/cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/startOrderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        android:text="@string/start_your_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeTextView"
        app:layout_constraintVertical_bias="0.202" />

    <Button
        android:id="@+id/trackOrderbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/track_your_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startOrderButton"
        app:layout_constraintVertical_bias="0.2"
        android:backgroundTint="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>